@@ -2,6 +2,7 @@
 Added support for a custom decoder when writing xml files to workaround the current production utf8 double encoding issue.
 Added short task names to shorten command line (eg. --write-xml becomes --wx).
 Fixed a node changeset bug where nodes created at the end of the interval were being excluded from the query.
+Added support for default task arguments requiring no name and added them for commonly used tasks requiring a single argument.
 
 0.22
 Updated mysql writing tasks to check if a timestamp is set and raise a meaningful error indicating where the error occurred.
